// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's deleteBookmark destination action: all fields 1`] = `
Object {
  "itemId": "[$3KBO5bBa",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "userId": "[$3KBO5bBa",
}
`;

exports[`Testing snapshot for Recombee's deleteBookmark destination action: required fields 1`] = `
Object {
  "itemId": "[$3KBO5bBa",
  "userId": "[$3KBO5bBa",
}
`;
